--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,12 @@
     {% if title %}{{ title }} - WorkoutApp{% else %}{{ _('Welcome to WorkoutApp') }}{% endif %}
 {% endblock %}
 
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='css/base.css')}}">
+{% endblock %}
+
 {% block navbar %}
     <nav class="navbar navbar-default" style="background-color: #ffbb66">
         <div class="container">
@@ -56,6 +62,8 @@
     {{ super() }}
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
+    <script src="{{ url_for('static', filename='js/forms.js') }}"></script>
+{#    <script src="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>#}
     <script>
         function translate(sourceElem, destElem, sourceLang, destLang) {
             $(destElem).html('<img src="{{ url_for('static', filename='loading.gif') }}">');
@@ -70,4 +78,8 @@
             });
         }
     </script>
+
+    <div style="position: absolute; bottom: 1rem; left: 1rem">
+        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+    </div>
 {% endblock %}
